Tue Oct 22 15:11:09 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* orbsvcs/orbsvcs/AV.dsp:
	* orbsvcs/orbsvcs/CosConcurrency.dsp:
	* orbsvcs/orbsvcs/CosEvent.dsp:
	* orbsvcs/orbsvcs/CosLifeCycle.dsp:
	* orbsvcs/orbsvcs/CosLoadBalancing.dsp:
	* orbsvcs/orbsvcs/CosNaming.dsp:
	* orbsvcs/orbsvcs/CosNotification.dsp:
	* orbsvcs/orbsvcs/CosTime.dsp:
	* orbsvcs/orbsvcs/CosTrading.dsp:
	* orbsvcs/orbsvcs/DsLogAdmin.dsp:
	* orbsvcs/orbsvcs/FT_ORB.dsp:
	* orbsvcs/orbsvcs/Fault_Tolerance.dsp:
	* orbsvcs/orbsvcs/PortableGroup.dsp:
	* orbsvcs/orbsvcs/Svc_Utils.dsp: Went over all project files in
	  TAOACE.dsw and fixed the Custom Build settings for all IDL
	  files.  Some of the settings were missing for some reason.
	  Thanks to John Morey <jmorey@mmintl.com> for reporting the
	  problem.

Tue Oct 22 10:15:36 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp: Fixed a unused variable warning.

Mon Oct 21 23:17:32 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.dsp (RSC): Fixed
	  the project file to prevent compile errors on Win32.

Mon Oct 21 22:45:02 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	Bug fix for [BUGID 1269]. Thanks to Carlos O'Ryan for donating
	this patch.

	* tao/Connection_Handler.cpp:
	* tao/Connection_Handler.h:
	* tao/Connection_Handler.inl:
	* tao/Connector_Impl.cpp:
	* tao/IIOP_Connection_Handler.cpp:
	* tao/IIOP_Connection_Handler.h:
	* tao/Invocation.cpp:
	* tao/LF_Connect_Strategy.cpp:
	* tao/Muxed_TMS.cpp:
	* tao/Notify_Handler.cpp:
	* tao/Synch_Refcountable.cpp:
	* tao/TAO_Server_Request.cpp:
	* tao/IIOP_Connector.cpp:
	* tao/IIOP_Transport.cpp:
	* tao/IIOP_Transport.h:
	* tao/Transport.cpp:
	* tao/Transport.h: Changes to the ORB Core. The details are as
	  follows

	  - It eliminates the two refcounts in the connection handler and
	    combines as one refcount.
